--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <img src="./img/2.png" alt="Logo" class="logo"/>
             </a>
             <ul class="menu">
-                <li class='menu_item'>who</li>
-                <li class='menu_item'>work</li>
-                <li class='menu_item'>Say Hi</li>
+                <li class='menu_item s'>who</li>
+                <li class='menu_item s'>work</li>
+                <li class='menu_item s'>Say Hi</li>
             </ul>
         </nav>
         <div class="header_title">
